--- a/Share Extension/de.lproj/Localizable.strings
+++ b/Share Extension/de.lproj/Localizable.strings
@@ -72,6 +72,9 @@
 /* Destination screen title */
 "share.destination.title" = "HalloApp";
 
+/* Message of alert when user is not logged in */
+"share.notlogged.message" = "Bitte HalloApp öffnen und einloggen.";
+
 /* Title of alert when user is not logged in */
 "share.notlogged.title" = "Du bist nicht eingeloggt.";
 
