--- a/Share Extension/de.lproj/Localizable.strings
+++ b/Share Extension/de.lproj/Localizable.strings
@@ -35,6 +35,9 @@
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Mehr erfahren";
 
+/* Displayed in place of own name (e.g., next to own comments) */
+"meCapitalized" = "Ich";
+
 /* Placeholder for media caption. */
 "share.composer.placeholder" = "Bildunterschrift";
 
