--- a/Halloapp/tr.lproj/Localizable.stringsdict
+++ b/Halloapp/tr.lproj/Localizable.stringsdict
@@ -132,6 +132,38 @@
 			<string>%d adet görsel hazırlanamadı. Lütfen tekrar dene veya farklı bir fotoğraf/video seç.</string>
 		</dict>
 	</dict>
+	<key>n.invites.count</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_invites_count@</string>
+		<key>n_invites_count</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>You have %d invite.</string>
+			<key>other</key>
+			<string>You have %d invites.</string>
+		</dict>
+	</dict>
+	<key>n.invites.remaining</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_invites_remaining@</string>
+		<key>n_invites_remaining</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>You have %d invite remaining</string>
+			<key>other</key>
+			<string>You have %d invites remaining</string>
+		</dict>
+	</dict>
 	<key>notification.n.photos</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
